// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NoData should display no data 1`] = `
.emotion-0 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.00938em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  margin: 10px 0;
}

<div>
  <p
    class="MuiTypography-root MuiTypography-body1 emotion-0"
  >
    common.noData
  </p>
</div>
`;

exports[`NoData should display no data with specific variant 1`] = `
.emotion-0 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  letter-spacing: 0.01071em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  margin: 10px 0;
}

<div>
  <p
    class="MuiTypography-root MuiTypography-body2 emotion-0"
  >
    common.noData
  </p>
</div>
`;
